--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "name": "chosen",
   "version": "1.5.1",
   "description": "Chosen is a JavaScript plugin that makes select boxes user-friendly. It is currently available in both jQuery and Prototype flavors.",
+  "keywords": [
+    "select",
+    "multiselect",
+    "dropdown",
+    "form",
+    "input",
+    "ui"
+  ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/harvesthq/chosen"
+    "url": "https://github.com/harvesthq/chosen.git"
   },
   "engines": {
     "node": ">=0.4.0"
@@ -13,7 +21,9 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jquery": ">=1.4.4"
+  },
   "devDependencies": {
     "coffee-script": ">= 1.6",
     "grunt": "~0.4.1",
@@ -29,55 +39,40 @@
     "grunt-zip": "~0.9.2",
     "load-grunt-tasks": "^3.0.0"
   },
-  "licenses": [
+  "contributors": [
     {
-      "type": "MIT",
-      "url": "https://github.com/harvesthq/chosen/blob/master/LICENSE.md"
+      "name": "Patrick Filler",
+      "url": "https://github.com/pfiller"
+    },
+    {
+      "name": "Christophe Coevoet",
+      "url": "https://github.com/stof"
+    },
+    {
+      "name": "Ken Earley",
+      "url": "https://github.com/kenearley"
+    },
+    {
+      "name": "Koen Punt",
+      "url": "https://github.com/koenpunt"
     }
   ],
-  "bowerJSON":{
-    "main": [
+  "license": "MIT",
+  "homepage": "https://harvesthq.github.io/chosen/",
+  "bugs": "https://github.com/harvesthq/chosen/issues",
+  "_extra": {
+    "title": "Chosen",
+    "license": {
+      "type": "MIT",
+      "url": "https://github.com/harvesthq/chosen/blob/master/LICENSE.md"
+    },
+    "links": {
+      "download": "https://github.com/harvesthq/chosen/releases",
+      "docs": "https://harvesthq.github.io/chosen/"
+    },
+    "files": [
       "chosen.jquery.js",
       "chosen.css"
     ]
-  },
-  "jqueryJSON": {
-    "title": "Chosen",
-    "keywords": [
-      "select",
-      "multiselect",
-      "dropdown",
-      "form",
-      "input",
-      "ui"
-    ],
-    "author": {
-      "url": "http://getharvest.com"
-    },
-    "maintainers": [
-      {
-        "name": "Patrick Filler",
-        "url": "https://github.com/pfiller"
-      },
-      {
-        "name": "Christophe Coevoet",
-        "url": "https://github.com/stof"
-      },
-      {
-        "name": "Ken Earley",
-        "url": "https://github.com/kenearley"
-      },
-      {
-        "name": "Koen Punt",
-        "url": "https://github.com/koenpunt"
-      }
-    ],
-    "download": "https://github.com/harvesthq/chosen/releases",
-    "homepage": "http://harvesthq.github.io/chosen/",
-    "docs": "http://harvesthq.github.io/chosen/",
-    "bugs": "https://github.com/harvesthq/chosen/issues",
-    "dependencies": {
-      "jquery": ">=1.4.4"
-    }
   }
 }
