missing png files (#2643)
* missing png files

chosen-sprite.png and chosen-sprite@2x.png missing from npm install

* Fixing indentation for png files

--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     },
     "files": [
       "chosen.jquery.js",
-      "chosen.css"
+      "chosen.css",
+      "chosen-sprite@2x.png",
+      "chosen-sprite.png"
     ]
   }
 }
